--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -4,16 +4,20 @@
         <tr>
             <th>Title</th>
             <th>Description</th>
-            <th>Actions</th>
+            <th colspan="3">Actions</th>
         </tr>
     </thead>
     <tbody>
         <%@articles.each do |article|%>
             <tr>
-                <td><%=article.title=%></td>
-                <td><%=article.description=%></td>
-                <td>placeholder</td>
+                <td><%=article.title%></td>
+                <td><%=article.description%></td>
+                <td><%= link_to "Show", article_path(article)%></td>
+                <td><%= link_to "Edit", edit_article_path(article) %></td>
+                <td><%= link_to "Delete", article_path(article), data: { turbo_method: :delete, turbo_confirm: "Are you sure?" } %></td>
             </tr>
         <%end%>
+        
     </tbody>
 </table>
+<p><%= link_to "Create new", new_article_path, method: :get%></p>
